# github-usage

./: .env.email-report.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GEMINI.md  LICENSE  QWEN.md  README.md  TO_DO.md  bug-report-20260616-143630.md  github-usage  github-usage-octocat-2026-06-21.json  github-usage-v3  pyproject.toml  setup.sh  start.sh
.github-usage/: config.example.toml
.github/workflows/: ci.yml  email-report.yml  email-report.yml.template  security.yml
backups/: docs-check.20260625-162212.bak  github-usage  github-usage-v2  github-usage.sh  security.yml.20260619-020545.bak  send-email-report.sh.bak
docs/: api-discovery-month.md  plan-email-report.md  plan-export-reports.md  repo-harness-guidance.md
docs/assessments/: bug-report-20260616-143630.md  bug-report-20260620-235700.md  bug-report-20260621-000000.md
docs/superpowers/plans/: 2026-06-14-repo-harness.md  2026-06-16-bug-fixes.md  2026-06-19-default-timeout-retry.md  2026-06-19-remaining-bug-fixes.md  2026-06-21-add-schedule-menu-option.md  2026-06-21-bug-fixes.md  2026-06-22-configurable-github-workflow.md  2026-06-25-repo-infrastructure-gardening.md  2026-06-26-module-refactor.md  (+7 more)
launchd/: com.github.github-usage.email-report.plist
scripts/: check  check-backups  check-sizes  docs-check  format  prune-backups  python  security  send-email-report.sh  setup  setup.sh  smoke
src/github_usage/: __init__.py  __main__.py  _email_report_common.py  api.py  auth.py  billing.py  cli.py  cli_email_report.py  cli_parsers.py  cli_runs.py  cli_runs_diff.py  email_report.py  email_report_html.py  email_report_send.py  email_report_text.py  export_csv.py  export_json.py  export_pdf.py  export_report.py  export_text.py  export_xlsx.py  http_retry.py  legacy.py  legacy_report.py  redact.py  report_account.py  report_actions.py  report_data.py  report_helpers.py  report_optional.py  report_products.py  report_summary.py  setup_ci.py  setup_config.py  setup_email_config.py  setup_launchd.py  setup_prompts.py  setup_secrets.py  setup_wizard.py  setup_workflow.py  (+2 more)
tests/: _fakes.py  conftest.py  test_api.py  test_auth.py  test_backup_policy.py  test_billing.py  test_cli.py  test_cli_email_report.py  test_cli_runs.py  test_cli_runs_diff.py  test_email_report.py  test_export_cli.py  test_export_csv.py  test_export_json.py  test_export_pdf.py  test_export_report.py  test_export_text.py  test_export_xlsx.py  test_http_retry.py  test_legacy_compat.py  test_redact.py  test_report_account.py  test_report_actions.py  test_report_data.py  test_report_optional.py  test_report_products.py  test_report_summary.py  test_setup_config.py  test_setup_wizard.py  test_setup_workflow.py  test_storage.py  test_workflow_templates.py
tests/fixtures/: artifacts.json  email_report_data.json  export_report_data.json  premium_request_usage.json  rate_limit.json  releases.json  repos.json  user.json
(+21 files in other folders)
