[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "github-usage"
version = "0.1.0"
description = "GitHub billing and usage report CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Kevin Grizzard" }
]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Operating System :: OS Independent",
]

[project.scripts]
github-usage = "github_usage.cli:main"

[project.optional-dependencies]
dev = [
  "bandit>=1.7.10",
  "black>=24.0",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", "backups"]
