[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "github-usage"
version = "0.1.0"
description = "GitHub billing and usage report CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Kevin Grizzard" }
]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Operating System :: OS Independent",
]

[project.scripts]
github-usage = "github_usage.cli:main"

[project.optional-dependencies]
dev = [
  "bandit>=1.7.10",
  "black>=24.0",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "ruff>=0.6",
]
# Export-format optional dependencies. PEP 621 does not support nested extras,
# so users install one of these (not a combined `export` extra):
#   pip install github-usage[export-xlsx]
#   pip install github-usage[export-pdf]
export-xlsx = ["openpyxl>=3.1"]
export-pdf = ["fpdf2>=2.7"]
# Test extras for the optional writers; run with:
#   uv run --extra test-xlsx --extra test-pdf pytest
test-xlsx = ["openpyxl>=3.1"]
test-pdf = ["fpdf2>=2.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["backups"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D100", "D103", "D104"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D103", "D104"]
"scripts/**/*" = ["D100", "D103", "D104"]

[tool.bandit]
exclude_dirs = ["tests", "backups"]
